@@ -1,3 +1,11 @@
+2014-01-30  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-sum.el (gnus-summary-read-group-1): Initialize the spam code if
+	that's needed.
+
+	* spam.el (spam-initialize): Allow calling repeatedly, but only run the
+	the code once (bug#9069).
+
 2014-01-18  Steinar Bang  <sb@dod.no>
 
 	* gnus-setup.el (gnus-use-sendmail): We never use sendmail for mail
